--- a/static/css/output.css
+++ b/static/css/output.css
@@ -650,6 +650,9 @@
   .top-full {
     top: 100%;
   }
+  .-right-2 {
+    right: calc(var(--spacing-2, 0.5rem) * -1);
+  }
   .-right-4 {
     right: calc(var(--spacing-4, 1rem) * -1);
   }
@@ -797,6 +800,9 @@
   .mr-3 {
     margin-right: var(--spacing-3, 0.75rem);
   }
+  .mr-4 {
+    margin-right: var(--spacing-4, 1rem);
+  }
   .-mb-px {
     margin-bottom: calc(var(--spacing-px, 1px) * -1);
   }
@@ -938,6 +944,9 @@
   .h-5 {
     height: var(--spacing-5, 1.25rem);
   }
+  .h-6 {
+    height: var(--spacing-6, 1.5rem);
+  }
   .h-8 {
     height: var(--spacing-8, 2rem);
   }
@@ -953,6 +962,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-1 {
+    width: var(--spacing-1, 0.25rem);
+  }
   .w-1\/2 {
     width: calc(1/2 * 100%);
   }
@@ -961,6 +973,9 @@
   }
   .w-5 {
     width: var(--spacing-5, 1.25rem);
+  }
+  .w-6 {
+    width: var(--spacing-6, 1.5rem);
   }
   .w-8 {
     width: var(--spacing-8, 2rem);
@@ -1250,9 +1265,6 @@
   }
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-  .grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
   .grid-cols-none {
     grid-template-columns: none;
@@ -1628,9 +1640,6 @@
   }
   .rounded-lg {
     border-radius: var(--radius-lg, 0.5rem);
-  }
-  .rounded-md {
-    border-radius: var(--radius-md, 0.375rem);
   }
   .rounded-xl {
     border-radius: var(--radius-xl, 0.75rem);
@@ -2216,9 +2225,6 @@
   .pb-2 {
     padding-bottom: var(--spacing-2, 0.5rem);
   }
-  .pb-4 {
-    padding-bottom: var(--spacing-4, 1rem);
-  }
   .text-center {
     text-align: center;
   }
@@ -2422,6 +2428,9 @@
   .text-blue-900 {
     color: var(--color-blue-900, #1e3a8a);
   }
+  .text-emerald-400 {
+    color: var(--color-emerald-400, #34d399);
+  }
   .text-emerald-600 {
     color: var(--color-emerald-600, #059669);
   }
@@ -2538,8 +2547,14 @@
   .scheme-only-light {
     color-scheme: only light;
   }
+  .opacity-0 {
+    opacity: 0%;
+  }
   .opacity-75 {
     opacity: 75%;
+  }
+  .opacity-100 {
+    opacity: 100%;
   }
   .mix-blend-plus-darker {
     mix-blend-mode: plus-darker;
@@ -2961,6 +2976,13 @@
       @media (hover: hover) {
         --tw-gradient-to: var(--color-purple-700, #7e22ce);
         --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position,) var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+      }
+    }
+  }
+  .hover\:text-emerald-300 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-emerald-300, #6ee7b7);
       }
     }
   }
